[DHUB-375] Started fixing sonar issues