@@ -1,13 +1,12 @@
 package org.dotwebstack.framework.backend.rdf4j;
 
-import com.google.common.collect.ImmutableMap;
+import java.util.Map;
 import lombok.NonNull;
 import org.eclipse.rdf4j.rio.RDFFormat;
 
 public final class FileFormats {
 
-  private static final ImmutableMap<String, RDFFormat> FORMATS =
-      ImmutableMap.of("trig", RDFFormat.TRIG, "nq", RDFFormat.NQUADS);
+  private static final Map<String, RDFFormat> FORMATS = Map.of("trig", RDFFormat.TRIG, "nq", RDFFormat.NQUADS);
 
   private FileFormats() {}
 
